--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,20 @@
-alembic==1.0.10
-blinker==1.4
+asn1crypto==0.24.0
 Click==7.0
-dominate==2.3.5
-Flask==1.0.3
-Flask-Bootstrap==3.3.7.1
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-Migrate==2.5.2
-Flask-Script==2.0.6
-Flask-SimpleMDE==0.3.0
-Flask-SQLAlchemy==2.4.0
-Flask-Uploads==0.2.1
-Flask-WTF==0.14.2
+cryptography==2.1.4
+enum34==1.1.6
+Flask==1.0.2
+gyp==0.1
+idna==2.6
+ipaddress==1.0.17
 itsdangerous==1.1.0
 Jinja2==2.10.1
-Mako==1.0.10
-markdown2==2.3.7
+keyring==10.6.0
+keyrings.alt==3.0
 MarkupSafe==1.1.1
-psycopg2-binary==2.8.2
-python-dateutil==2.8.0
-python-editor==1.0.4
-six==1.12.0
-SQLAlchemy==1.3.3
-visitor==0.1.3
+pycrypto==2.6.1
+pygobject==3.26.1
+pywatchman==1.3.0
+pyxdg==0.25
+SecretStorage==2.3.1
+six==1.11.0
 Werkzeug==0.15.4
-WTForms==2.2.1
