--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,28 @@
-asn1crypto==0.24.0
-Click==7.0
-cryptography==2.1.4
-enum34==1.1.6
+
+alembic==1.0.0
+blinker==1.4
+click==6.7
+dominate==2.3.1
 Flask==1.0.2
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-Migrate==2.2.1
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
+Flask-Uploads==0.2.1
+Flask-WTF==0.14.2
 gunicorn==19.9.0
-ipaddress==1.0.17
-itsdangerous==1.1.0
-Jinja2==2.10.1
-keyring==10.6.0
-keyrings.alt==3.0
-MarkupSafe==1.1.1
+itsdangerous==0.24
+Jinja2==2.10
+Mako==1.0.7
+MarkupSafe==1.0
+psycopg2==2.7.5
+PyJWT==1.6.4
+python-dateutil==2.7.3
+python-editor==1.0.3
 six==1.11.0
-Werkzeug==0.15.4
+SQLAlchemy==1.2.11
+visitor==0.1.3
+Werkzeug==0.14.1
+WTForms==2.2.1
