--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,29 @@
 
-alembic==1.0.0
+alembic==1.0.10
 blinker==1.4
-click==6.7
-dominate==2.3.1
-Flask==1.0.2
+Click==7.0
+dominate==2.3.5
+Flask==1.0.3
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
-Flask-Migrate==2.2.1
+Flask-Migrate==2.5.2
 Flask-Script==2.0.6
-Flask-SQLAlchemy==2.3.2
+Flask-SimpleMDE==0.3.0
+Flask-SQLAlchemy==2.4.0
 Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
 gunicorn==19.9.0
-itsdangerous==0.24
-Jinja2==2.10
-Mako==1.0.7
-MarkupSafe==1.0
-psycopg2==2.7.5
-PyJWT==1.6.4
-python-dateutil==2.7.3
-python-editor==1.0.3
-six==1.11.0
-SQLAlchemy==1.2.11
+itsdangerous==1.1.0
+Jinja2==2.10.1
+Mako==1.0.10
+markdown2==2.3.7
+MarkupSafe==1.1.1
+psycopg2==2.8.2
+python-dateutil==2.8.0
+python-editor==1.0.4
+six==1.12.0
+SQLAlchemy==1.3.3
 visitor==0.1.3
-Werkzeug==0.14.1
+Werkzeug==0.15.4
 WTForms==2.2.1
